--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../src/custom.css">
     <link rel="stylesheet" href="../src/customv2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Document</title>
 </head>
 <body>
     <div id="root"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/camanjs/4.1.2/caman.full.min.js"></script>
+   
 </body>
 </html>
